# pokeday-server

./: Cargo.toml
src/: lib.rs  main.rs
src/accounts/: account.rs  types.rs
src/routes/: auth.rs
